# family-law-assistant

./: .gitignore  app.py  chunking.py  config.py  docker-compose.yml  embedding.py  graph.py  lexicon.csv  lexicon.py  logs.py  main.py  milvus_store.py  node_logger.py  pyproject.toml  state.py
chat_history/: conv_20251225_094841.json
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChatInterface.tsx
nodes/: case_outcome_predictor.py  generator.py  information_gatherer.py  query_analyzer.py  reasoning_explainer.py  retriever.py  update_handler.py
test/: test_retriever.py
